[package]
name = "helm-governed-jobs"
description = "helm-governed-jobs — governed job stream as a mountable HelmModule."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
converge-core.workspace = true
futures = "0.3"
helm-module-contracts = { version = "0.3.0", path = "../../contracts/crates/helm-module-contracts" }
helm-truth-execution = { version = "0.2.1", path = "../helm-truth-execution" }
application-kernel = { version = "0.2.1", path = "../application-kernel" }
application-storage = { version = "0.2.1", path = "../application-storage" }
organism-pack = { workspace = true }
# RP-HELMS-SUBSTRATE-SEAM: approved foundation→substrate edge; needed for
# EventHub / EventHubHandle / EventCursor / EventEnvelope / SSE types. HelmModule
# / ModuleState now imported from helm-module-contracts (RFL-128).
runway-app-host = { version = "3.5.0", path = "../../../../runtime-runway/crates/runway-app-host" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
truth-catalog = { version = "0.2.1", path = "../truth-catalog" }
uuid.workspace = true
