[package]
name = "helm-module-contracts"
description = "Shared contracts for Helm modules mounted into Runtime Runway."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
