[package]
name = "helm-module-contracts"
description = "Shared contracts for Helm modules mounted into Runtime Runway."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
