[package]
name = "helm-session-contracts"
description = "Session contract types for the Helms Session Intelligence Spine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
