[package]
name = "helm-session-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
director-contracts = { path = "../director-contracts" }
helm-client = { path = "../helm-client" }
helm-module-contracts = { path = "../helm-module-contracts" }
helm-session-contracts = { path = "../helm-session-contracts" }
runway-app-host = { path = "../../../../runtime-runway/crates/runway-app-host" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
runway-storage = { path = "../../../../runtime-runway/crates/runway-storage" }
tempfile = "3"
tower = "0.5"
