[package]
name = "helm-session-host"
description = "helm-session-host — server-side Session Helm for the Session Intelligence Spine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# RP-LAYERING(RFL-125): held from crates.io — this crate needs runway-app-host
# HEAD APIs (ModuleState, HelmModule::module_state, sse::event_stream,
# awaitable EventSubscription), and runway-app-host is publish = false by
# documented design (internal runway-ambient substrate). Publish this crate
# only after the runway layering fork is resolved.
publish = false

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
director-contracts = { version = "0.2.1", path = "../director-contracts" }
helm-client = { version = "0.2.1", path = "../helm-client" }
helm-module-contracts = { version = "0.2.1", path = "../helm-module-contracts" }
helm-session-contracts = { version = "0.2.1", path = "../helm-session-contracts" }
runway-app-host = { version = "3.4.2", path = "../../../../runtime-runway/crates/runway-app-host" }
runway-storage = { version = "3.4.2", path = "../../../../runtime-runway/crates/runway-storage" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
runway-auth = { path = "../../../../runtime-runway/crates/runway-auth" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
