[package]
name = "helm-truth-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
converge-core.workspace = true
converge-kernel.workspace = true
converge-pack.workspace = true
runway-app-host = { path = "../../../../../runway/crates/runway-app-host" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

application-kernel = { path = "../application-kernel" }
application-storage = { path = "../application-storage" }
truth-catalog = { path = "../truth-catalog" }
