[package]
name = "helm-truth-execution"
description = "helm-truth-execution — Helm's truth dispatcher framework as a HelmModule."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# RP-LAYERING(RFL-125): held from crates.io — this crate needs runway-app-host
# HEAD APIs (ModuleState, HelmModule::module_state, sse::event_stream,
# awaitable EventSubscription), and runway-app-host is publish = false by
# documented design (internal runway-ambient substrate). Publish this crate
# only after the runway layering fork is resolved.
publish = false

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
converge-core.workspace = true
converge-kernel.workspace = true
converge-pack.workspace = true
runway-app-host = { version = "3.4.2", path = "../../../../runtime-runway/crates/runway-app-host" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

application-kernel = { version = "0.2.1", path = "../application-kernel" }
application-storage = { version = "0.2.1", path = "../application-storage" }
truth-catalog = { version = "0.2.1", path = "../truth-catalog" }
