[package]
name = "helm-truth-execution"
description = "helm-truth-execution — Helm's truth dispatcher framework as a HelmModule."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
converge-core.workspace = true
converge-kernel.workspace = true
converge-pack.workspace = true
helm-module-contracts = { version = "0.2.1", path = "../../contracts/crates/helm-module-contracts" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
uuid.workspace = true

application-kernel = { version = "0.2.1", path = "../application-kernel" }
application-storage = { version = "0.2.1", path = "../application-storage" }
truth-catalog = { version = "0.2.1", path = "../truth-catalog" }
