[package]
name = "helm-plugin-runtime"
description = "Helm application plugin runtime (WASM via wasmtime)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
converge-core.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
tracing.workspace = true
wasmtime.workspace = true

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
tokio-test.workspace = true
