[package]
name = "prio-expenses"
description = "Prio expenses capability module for the Helms platform."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
organism-intelligence = { workspace = true, features = ["ocr", "pdf"] }
capability-core = { version = "0.2.1", path = "../capability-core" }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
