[package]
name = "prio-truths"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
converge-kernel = { path = "../../../converge/crates/kernel" }
converge-model = { path = "../../../converge/crates/model" }
organism-domain = { path = "../../../organism/crates/domain" }
organism-pack = { path = "../../../organism/crates/pack" }
organism-runtime = { path = "../../../organism/crates/runtime" }
prio-module-core = { path = "../prio-module-core" }
prio-modules = { path = "../prio-modules" }
serde.workspace = true
serde_json.workspace = true
