[package]
name = "prio-workflow"
description = "Prio workflow capability module for the Helms platform."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
capability-core = { version = "0.2.1", path = "../capability-core" }

