[package]
name = "truth-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
converge-kernel.workspace = true
converge-model.workspace = true
organism-domain.workspace = true
organism-pack.workspace = true
organism-runtime.workspace = true
capability-core = { path = "../capability-core" }
capability-registry = { path = "../capability-registry" }
serde.workspace = true
serde_json.workspace = true
