[package]
name = "truth-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axiom-truth.workspace = true
chrono.workspace = true
# Force the `_chat` feature on local manifold so axiom-truth's `guidance`
# module (which imports `manifold::select_healthy_chat_backend`) compiles
# against the patched local checkout. The published manifold 1.0.0 re-exports
# the symbol ungated, so axiom standalone needs no feature; this is a
# helms-side workaround until manifold publishes a version that ungates the
# selection helpers or axiom 0.8.x bumps to a manifold release with `_chat`.
converge-manifold-adapters.workspace = true
converge-kernel.workspace = true
converge-model.workspace = true
organism-domain.workspace = true
organism-pack.workspace = true
organism-runtime.workspace = true
thiserror.workspace = true
capability-core = { path = "../capability-core" }
capability-registry = { path = "../capability-registry" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
